Correct minor layout bugs in the marginal note

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2585,8 +2585,6 @@ h2:target .heading-anchor, h3:target .heading-anchor, h4:target .heading-anchor,
   position: relative;
   margin-top: 1.4rem;
   margin-bottom: calc(0.9rem + 1 * var(--es));
-  border-top: 0.1rem solid #a8a8b4;
-  border-bottom: 0.1rem solid #a8a8b4;
 }
 @media screen and (min-width: 37em) {
   .note {
@@ -2604,6 +2602,8 @@ h2:target .heading-anchor, h3:target .heading-anchor, h4:target .heading-anchor,
 
 .note__content {
   padding: 0.625rem 2rem;
+  border-top: 0.1rem solid #a8a8b4;
+  border-bottom: 0.1rem solid #a8a8b4;
   background: #e7e8e9;
   overflow: hidden;
 }
@@ -2693,12 +2693,12 @@ h2:target .heading-anchor, h3:target .heading-anchor, h4:target .heading-anchor,
 }
 
 @media screen and (min-width: 48em) {
-  .note-long > .note__content {
+  .note-long .note__content {
     position: static;
     overflow: auto;
     height: auto;
   }
-  .note-long > .note__content:after {
+  .note-long .note__content:after {
     display: none;
   }
 }
@@ -2711,13 +2711,13 @@ h2:target .heading-anchor, h3:target .heading-anchor, h4:target .heading-anchor,
 }
 .checkbox-note ~ .note__content:after {
   position: absolute;
-  bottom: 0;
+  bottom: 0.1rem;
   z-index: 9;
   width: calc(100% - 4rem);
   height: 100%;
   content: "";
   pointer-events: none;
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 33%, #dfe0e2 90%);
+  background-image: linear-gradient(to bottom, rgba(231, 232, 233, 0) 33%, #e7e8e9 90%);
 }
 @media screen and (min-width: 48em) {
   .checkbox-note ~ .note__content {
@@ -2787,7 +2787,7 @@ h2:target .heading-anchor, h3:target .heading-anchor, h4:target .heading-anchor,
   height: 100%;
 }
 .checkbox-note:checked ~ .open-note {
-  bottom: -2.1rem;
+  bottom: -2rem;
 }
 .checkbox-note:checked ~ .open-note > .arrow {
   border-top: unset;
